--- a/app/views/documents/_form.html.haml
+++ b/app/views/documents/_form.html.haml
@@ -7,7 +7,8 @@
           %li= message
 
   .field
-    = f.label :file
-    = f.file_field :file, direct_upload: true
+    = f.label :file, 'Arquivo'
+    = f.file_field :file, direct_upload: true, accept: '.txt'
+
   .actions
-    = f.submit 'Save'
+    = f.submit 'Salvar'
