--- a/app/views/documents/index.html.haml
+++ b/app/views/documents/index.html.haml
@@ -15,9 +15,9 @@
         %td= document.user.try(:email)
         %td= document.status
         %td= link_to 'Download', document.file
-        %td= document.created_at
-        %td= link_to 'Show', document
+        %td=l document.created_at, format: :short
+        %td= link_to 'Visualizar', document
 
 %br
 
-= link_to 'New Document', new_document_path
+= link_to 'Novo Documento', new_document_path
